--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -165,10 +165,14 @@ tr:nth-child(n+2):hover {
 
 /* Nav Bar */
 
+
+
+
+
 .navbar-container {
 	background-color: rgb(85, 85, 85);
 	width: 100%;
-	padding: 5px 20px;
+	padding: 5px 40px;
 	margin-bottom: 10px;
 	box-shadow: 0 0 6px 3px;
 	font-size: 12px;
@@ -249,33 +253,7 @@ tr:nth-child(n+2):hover {
 }
 
 @media screen and (max-width: 600px) {
-    .navlinks a:not(:first-child) {
-        display: none;
-    }
-    .navlinks a.res-menu {
-        float: right;
-        display: block;
-    }
-    .navlinks.responsive {
-        display: block;
-        position: relative;
-    }
-    .navlinks.responsive .res-menu {
-      position: absolute;
-      right: 0px;
-      top: 6.5px;
-    }
-    .navlinks.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .navlinks a:hover {
-        color: gold;
-        background-color: inherit;
-        border: none;
 
-    }
 }
 
 /* Page: New Game */
@@ -496,7 +474,8 @@ tr:nth-child(n+2):hover {
 .result-table {
 	font-size: 1.5em;
 	width: 80%;
-	margin: 25px 0px 25px 0px;
+    margin: 25px 10px 25px 10px;
+    
 }
 
 .row-correct {
@@ -812,33 +791,28 @@ th {
 
 /* Profile Page */
 
-.profile-content {
-	width: 85%;
-}
-
 #profile-menu {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	width: 100%;
-	margin-top: 25px;
+    margin-top: 25px;
+    overflow: hidden;
 }
 
 #profile-top {
-	display: inline-flex;
+	display: flex;
 	width: 100%;
-	padding: 10px;
 }
 
 #profile-user {
-	width: 33%;
+    flex: 1;
 	text-align: center;
 	background-color: rgb(255, 250, 125);
 	font-size: 1.6em;
-	margin-right: 10px;
-	padding: 5px;
-	border-radius: 4px;
-	border: black solid 2px;
+    border-radius: 4px;
+    margin: 7px;
+    padding: 5px;
 }
 
 #profile-user>p {
@@ -847,12 +821,12 @@ th {
 }
 
 #profile-info {
-	width: 67%;
+    flex: 2;
 	background-color: lightgreen;
 	font-size: 1.3em;
-	padding: 5px;
-	border-radius: 4px;
-	border: black solid 2px;
+    border-radius: 4px;
+    margin: 7px;
+    padding: 15px;
 }
 
 #profile-info>p {
@@ -860,21 +834,20 @@ th {
 }
 
 #profile-bottom {
-	display: inline-flex;
+	display: flex;
 	width: 100%;
-	padding: 10px;
 }
 
 #overall {
-	width: 33%;
+    flex: 1;
 	display: flex;
 	flex-direction: column;
 	background-color: lightblue;
 	text-align: center;
-	margin-right: 10px;
-	padding: 5px;
-	border-radius: 4px;
-	border: black solid 2px;
+    border-radius: 4px;
+    margin: 7px;
+    padding: 5px;
+    justify-content: center;
 }
 
 #overall>h4 {
@@ -900,15 +873,16 @@ th {
 }
 
 #form-container {
-	width: 67%;
+    flex: 2;
 	display: flex;
 	background-color: salmon;
-	border-radius: 4px;
-	border: black solid 2px;
+    border-radius: 4px;
+    margin: 7px;
+    padding: 5px;
 }
 
 #profile-form {
-	width: 100%;
+    width: 100%;
 	display: flex;
 	flex-direction: column;
 	padding: 5px;
@@ -918,20 +892,23 @@ th {
 	width: 100%;
 	display: inline-flex;
 	font-size: 1.4em;
-	margin-bottom: 10px;
 }
 
 #form-top>p {
-	margin-right: 10px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+
+#form-top>div>div {
+    font-size: 0.8em;
+    margin-bottom: 5px;
 }
 
 .myslider {
 	-webkit-appearance: none;
 	background: white;
 	height: 20px;
-	width: 40%;
 	margin-right: 10px;
-	border-radius: 10px;
 	outline: none;
 }
 
@@ -945,7 +922,6 @@ th {
 	background: rgb(85, 85, 85);
 	width: 5%;
 	height: 20px;
-	border-radius: 10px;
 }
 
 #form-bottom {
@@ -992,13 +968,13 @@ th {
 	background-color: lightcoral;
 }
 
-@media (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
 	.text>form>div {
 		width: 70%;
 	}
 }
 
-@media (max-width: 800px) {
+@media screen and (max-width: 800px) {
     .content {
         width: 90%;
     }
@@ -1040,25 +1016,12 @@ th {
 		display: flex;
 		flex-direction: column;
 	}
-	#divider {
-		background-color: none;
-		margin: 0px;
-	}
-	#overall-data {
-		flex-direction: column;
-	}
-	#overall-data>div {
-		margin-bottom: 5px;
-	}
 	td,
 	th {
 		text-align: center;
 		font-size: 0.75em;
 	}
 	.profile-content {
-		width: 100%;
-	}
-	.result-table {
 		width: 100%;
 	}
 	content {
@@ -1080,7 +1043,16 @@ th {
     }
 }
 
-@media (max-width: 650px) { 
+@media screen and (max-width: 600px) { 
+    .result-table {
+        display: block;
+        overflow-x: auto;
+        margin: auto;
+        width: 95%;
+    }
+    .page-head {
+        margin-bottom: 0px;
+    }
     .option {
         width: 100%;
         height: 100%;
@@ -1132,5 +1104,60 @@ th {
     }
     .navbar {
         flex-direction: row;
+    }
+    .navlinks a:not(:first-child) {
+        display: none;
+    }
+    .navlinks a.res-menu {
+        float: right;
+        display: block;
+    }
+    .navlinks.responsive {
+        display: block;
+        position: relative;
+    }
+    .navlinks.responsive .res-menu {
+      display: inline-block;
+      cursor: pointer;
+      position: absolute;
+      right: 0px;
+      top: 6.5px;
+      padding: none;
+    }
+    .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 3px;
+        background-color: gold;
+        margin: 7px 0;
+        transition: 0.25s;
+    }
+    .change .bar1 {
+        /* -webkit-transform: rotate(-45deg) translate(-9px, 6px); rotate(-45deg)*/
+        transform: translate(0px, 0px) rotate(-45deg);
+    }
+    .change .bar2 {
+        opacity: 0;
+    }
+    .change .bar3 {
+        /* -webkit-transform: rotate(45deg) translate(-8px, -8px); rotate(45deg) */
+        transform: translate(0px, -20px) rotate(45deg);
+      }
+    .navlinks.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .navlinks a:hover {
+        color: gold;
+        background-color: inherit;
+        border: none;
+    }
+    #profile-top {
+        display: flex;
+        flex-direction: column;
+    }
+    #profile-bottom {
+        display: flex;
+        flex-direction: column;
     }
 }
