--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -410,7 +410,7 @@ tr:nth-child(n+2):hover {
 
 .text>form>div {
 	clear: both;
-	width: 40%;
+	width: 75%;
 }
 
 .text>form>div>label {
@@ -428,7 +428,7 @@ tr:nth-child(n+2):hover {
 	display: block;
 	height: 0%;
 	flex-wrap: wrap;
-	width: 100%;
+	width: 375px;
 }
 
 .games-container {
@@ -968,13 +968,7 @@ th {
 	background-color: lightcoral;
 }
 
-@media screen and (max-width: 1000px) {
-	.text>form>div {
-		width: 70%;
-	}
-}
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
     .content {
         width: 90%;
     }
@@ -1027,9 +1021,6 @@ th {
 	content {
 		width: 100%;
 	}
-	.text>form>div {
-		width: 85%;
-    }
     .article-section {
         flex-direction: column;
     }
@@ -1067,6 +1058,9 @@ th {
         height: 0%;
         flex-wrap: wrap;
         width: 100%;
+    }
+    .option:hover .text>form {
+        width: inherit;
     }
     .text {
         padding: 10px;
@@ -1132,14 +1126,14 @@ th {
         transition: 0.25s;
     }
     .change .bar1 {
-        /* -webkit-transform: rotate(-45deg) translate(-9px, 6px); rotate(-45deg)*/
+        -webkit-transform: translate(0px, 0px) rotate(-45deg);
         transform: translate(0px, 0px) rotate(-45deg);
     }
     .change .bar2 {
         opacity: 0;
     }
     .change .bar3 {
-        /* -webkit-transform: rotate(45deg) translate(-8px, -8px); rotate(45deg) */
+        -webkit-transform: translate(0px, -20px) rotate(45deg);
         transform: translate(0px, -20px) rotate(45deg);
       }
     .navlinks.responsive a {
